--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout Source Branch
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Setup Node.js Environment # 设置 Node.js 环境
         uses: actions/setup-node@v4
